# receipt_statistics

./: .gitignore  pyproject.toml
docker/: docker-compose.local.yml  docker-compose.override_stage_test.yml  docker-compose.override_unit_test.yml  docker-compose.production.yml  docker-compose.yml
docker/django/: Dockerfile  deploy.sh  develop-entrypoint.sh  product-entrypoint.sh  runtests.sh
docker/logstash/: Dockerfile
docker/logstash/config/: ca.crt  logstash.yml
docker/logstash/pipeline/: service.conf
docker/nginx/: nginx.conf_template
envs/: development.env  local.env  production.env  test.env
server/settings/: __init__.py
server/settings/components/: __init__.py  common.py
