[tool.poetry]
name = "receipt_statistics"
version = "0.1.0"
description = ""
authors = ["Rezin P.V <p.rezin@limecreditgroup.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-split-settings = "^1.1.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
